# cpp2json

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CopyFiles.cmake  Cpp2JsonPrivateDefinition.cmake  CreateOption.cmake  CreateTest.cmake  GitInfo.cmake  PrependList.cmake
cmake/Modules/: FindClang.cmake  FindLLVM.cmake
scripts/travis/: create_release_tag.sh  run_tests.sh
scripts/travis/osx/: build_all.sh  setup_requirements.sh
shared/: CMakeLists.txt  Cpp2JsonAnnotations.hpp
sources/: CMakeLists.txt  Cpp2JsonAction.cpp  Cpp2JsonAction.hpp  Cpp2JsonActionFactory.cpp  Cpp2JsonActionFactory.hpp  Cpp2JsonParameters.hpp  Cpp2JsonVisitor.cpp  Cpp2JsonVisitor.hpp  JsonOutputWriter.cpp  JsonOutputWriter.hpp  main.cpp
sources/app/: CMakeLists.txt  JsonOutputWriter.cpp  JsonOutputWriter.hpp  main.cpp
sources/core/: CMakeLists.txt  CommandLineHelpers.cpp  CommandLineHelpers.hpp  Cpp2JsonAction.cpp  Cpp2JsonAction.hpp  Cpp2JsonActionFactory.cpp  Cpp2JsonActionFactory.hpp  Cpp2JsonParameters.hpp  Cpp2JsonVisitor.cpp  Cpp2JsonVisitor.hpp
sources/core/include/: CommandLineHelpers.hpp  Cpp2JsonActionFactory.hpp  Cpp2JsonVisitor.hpp
sources/core/src/: CommandLineHelpers.cpp  Cpp2JsonAction.cpp  Cpp2JsonActionFactory.cpp  Cpp2JsonVisitor.cpp
sources/shared/: CMakeLists.txt  Cpp2Json.hpp
sources/tests/: CMakeLists.txt  Cpp2JsonVisitorFixture.cpp  Cpp2JsonVisitorFixture.hpp  Cpp2JsonVisitorTest.cpp  gtest.cpp
sources/tests/resources/: test_example.hpp  test_type_qualifier.hpp
tests/: CMakeLists.txt  test01.hpp  test02.hpp  test03.hpp
tests/datas/: test_integral_array_types.hpp  test_integral_types.hpp  test_stl_containers.hpp
tests/results/: test_integral_array_types.json  test_integral_types.json  test_stl_containers.json
tests/src/: TestCpp2Json.cpp  main.cpp
